DSA, case changes

--- a/_posts/2015-07-06-RegExp.lanation.md
+++ b/_posts/2015-07-06-RegExp.lanation.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: RegExp.lanation
+title: regexp.lanation
 ---
 
 New programmers seem afraid of regular expressions. I love these particular tools and wanted to offer  a full primer from abc to <a href="http://stackoverflow.com/questions/800813/what-is-the-most-difficult-challenging-regular-expression-you-have-ever-written"> ^M{0,4}(CM|CD|D?C{0,3})(XC|XL|L?X{0,3})(IX|IV|V?I{0,3})$ </a>. Regular expressions are a very old computer science concept that uses patterns to match subsets of strings. They are language agnostic, and can be a tool that you use for matching and modifying urls and other strings within your applications and for solving interview questions in a quirky manner.
