--- a/404.md
+++ b/404.md
@@ -6,4 +6,6 @@ permalink: /404.html
 
 Sorry, we can't find that page that you're looking for. You can try again by going [back to the homepage]({{ site.baseurl }}/).
 
+This is a candle flare at a biodigester, I think near Amhearst, MA.
+
 [<img src="{{ site.baseurl }}/images/404.jpg" alt="brr NY is cold"/>]({{ site.baseurl }}/)
